--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -5,12 +5,20 @@
   Pirate Weight: <input type="text" name="pirate[weight]">
   Pirate Height: <input type="text" name="pirate[height]">
 
+  <h2>Ships</h2>
+  <label for="ship_name_1">Name</label>
   Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]" >
-  Ship Type: <input type="text" name="pirate[ships][][type]">
-  Ship Booty: <input type="text" name="pirate[ships][][booty]">
+  <label for="ship_type_1">Type</label>
+  Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]">
+  <label for="ship_booty_1">Booty</label>
+  Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]">
 
+  <label for="ship_name_2">Name</label>
   Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]" >
-  Ship Type: <input type="text" name="pirate[ships][][type]">
-  Ship Booty: <input type="text" name="pirate[ships][][booty]">
-  <input type="submit">
+  <label for="ship_type_2">Type</label>
+  Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]">
+  <label for="ship_booty_2">Booty</label>
+  Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
+
+  <button type="submit">Submit</button>
 </form>
